--- a/index.html
+++ b/index.html
@@ -191,5 +191,6 @@ const App = {
 
 Vue.createApp(App).mount("#app");
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 </body>
 </html>
